--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -4,6 +4,5 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "printWidth": 80,
-  "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "bracketSpacing": true
 }
