--- a/backend/.env..sample
+++ b/backend/.env..sample
@@ -1,3 +1,7 @@
 PORT = ''
-MONGODB_URL = 'mongodb+srv://WaasimAnsari:<db_password>@cluster0.ascuo.mongodb.net'
+MONGODB_URL = 'mongodb+srv://WaasimAnsari:<USE YOUR OWN DB PASSWORD>@cluster0.ascuo.mongodb.net'
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = USE YOUR OWN TOKEN
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET =  USE YOUR OWN TOKEN
+REFRESH_TOKEN_EXPIRY = 10d
