Updated few minor typos

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,10 +1,10 @@
 PORT = ''
-MONGODB_URL = 'mongodb+srv://WaasimAnsari:<USE YOUR OWN DB PASSWORD>@cluster0.ascuo.mongodb.net'
+MONGODB_URL = USE YOUR OWN DB URL
 CORS_ORIGIN = *
 ACCESS_TOKEN_SECRET = USE YOUR OWN TOKEN
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET =  USE YOUR OWN TOKEN
 REFRESH_TOKEN_EXPIRY = 10d
-CLOUDINARY_API_KEY =
-CLOUDINARY_API_SCRET =
 CLOUDINARY_CLOUD_NAME =
+CLOUDINARY_API_KEY =
+CLOUDINARY_API_SECRET =
